--- a/admin/src/components/datatable/datatable.scss
+++ b/admin/src/components/datatable/datatable.scss
@@ -2,6 +2,26 @@
     height: 600px;
     padding: 20px;
 
+    .datatableTitle {
+        width: 100%;
+        margin-bottom: 10px;
+        display: flex;
+        color: gray;
+        align-items: center;
+        justify-content: space-between;
+
+        a {
+            text-decoration: none;
+            color: green;
+            font-size: 16px;
+            font-weight: 400;
+            border: 1px solid green;
+            padding: 5px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+    }
+
     .cellWithImg {
         display: flex;
         align-items: center;
@@ -40,6 +60,10 @@
         display: flex;
         align-items: center;
         gap: 15px;
+
+        a {
+            text-decoration: none;
+        }
         
         .viewButton {
             padding: 2px 5px;
