--- a/admin/src/components/sidebar/sidebar.scss
+++ b/admin/src/components/sidebar/sidebar.scss
@@ -8,7 +8,12 @@
         height: 50px;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: center; 
+
+        a {
+            text-decoration: none;
+         }
+        
     }
 
     .logo {
@@ -52,6 +57,10 @@
             .icon {
                 font-size:20px;
                 color: #7451f8;
+            }
+
+            a {
+                text-decoration: none;
             }
 
             span {
