--- a/admin/src/page/newHotel/newhotel.scss
+++ b/admin/src/page/newHotel/newhotel.scss
@@ -36,7 +36,18 @@
                     display: flex;
                     flex-wrap: wrap;
                     gap: 30px;
-                    justify-content: space-around;
+                    justify-content: space-between;
+
+
+
+                    .selectRooms {
+                        width: 100%;
+
+                        select {
+                            width: 100%;
+                            padding: 10px;
+                        }
+                    }
 
                     .formInput {
                         width: 40%;
@@ -53,6 +64,11 @@
 
                         }
 
+                        select {
+                            width: 100%;
+                            padding: 10px;
+                        }
+
                         label {
                             display: flex;
                             align-items: center;
@@ -64,18 +80,19 @@
                         }
 
                     }
-
+                    
                     button {
-                        width: 160px;
+                        width: 150px;
                         padding: 10px;
                         border: none;
                         background-color: teal;
                         color: white;
-                        border-radius: 5px;
                         font-weight: bold;
                         cursor: pointer;
                         margin-top: 10px;
                     }
+
+                    
                 }
             }
         }
