--- a/admin/src/page/newRoom/newRoom.scss
+++ b/admin/src/page/newRoom/newRoom.scss
@@ -36,7 +36,7 @@
                     display: flex;
                     flex-wrap: wrap;
                     gap: 30px;
-                    justify-content: space-around;
+                    justify-content: space-between;
 
                     .formInput {
                         width: 40%;
